--- a/service.conf
+++ b/service.conf
@@ -1,9 +1,9 @@
 server {
     charset utf-8;
-    server_name expenses-user-api;
+    server_name expenses-user-service;
 
     location ~ ^/(.*)$ {
-        proxy_pass http://expenses-user-api/$1$is_args$args;
+        proxy_pass http://expenses-user-service/$1$is_args$args;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
